[workspace]
members = [
    "interactor",
    "persistence",
    "domain",
    "contracts",
    "application",
    ".",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
thiserror = "1.0.61"


[package]
name = "text-document"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
authors = ["Cyril Jacquet <cyril.jacquet@skribisto.eu>"]
repository = "https://github.com/jacquetc/text-document"
readme = "README.md"
documentation = "https://docs.rs/text-document/"
description = """
Text document structure and management.
"""
keywords = ["text", "document", "model", "format"]
categories = ["data-structures", "text-editors", "text-processing", "parsing"]


[dependencies]
interactor = { path = "interactor" }
persistence = { path = "persistence" }
